--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+*, *::before, *::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}/*# sourceMappingURL=style.css.map */
