--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap');
+
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+@import "partials/variables";
+@import "partials/mixins";
 
 *, *::before, *::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+body {
+    font-family: 'Golos Text', sans-serif;
+}
+
+.header-wrapper { 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: $header-height;
+    padding: $header-padding;
+    width: 100%;
 }
