--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,7 +1,9 @@
 // == COLORS ==
 $text-primary: rgba(15, 19, 26, 1);
 $text-secondary: rgba(56, 65, 80, 1);
+$brand-light: rgba(234, 237, 241, 1);
 
 // == SIZES == 
 $header-height: 104px;
 $header-padding: 32px 80px 32px 80px;
+$gap: 2rem;
