--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,7 @@ body {
     font-family: 'Golos Text', sans-serif;
 }
 
+// HEADER
 .header-wrapper { 
     display: flex;
     justify-content: space-between;
@@ -21,4 +22,26 @@ body {
     height: $header-height;
     padding: $header-padding;
     width: 100%;
+    background-color: $brand-light;
+}
+
+.header-nav {
+    ul {
+        display: flex;
+        gap: $gap;
+        cursor: pointer;
+    }
+        li{
+            list-style-type: none;
+        }
+            a {
+                @include text-medium;
+                color: $text-secondary;
+                text-decoration: none;
+            }
+}
+
+.header-list {
+    display: flex;
+    gap: $gap;
 }
