--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -40,4 +40,30 @@
     line-height: 1.5rem;
 }
 
-// == HEADER ==
+@mixin gap-text($gap) {
+    gap: $gap;
+}
+
+@mixin padding-text($padding) {
+    padding: $padding;
+}
+
+@mixin weight($font-weight) {
+    font-weight: $font-weight;
+}
+
+@mixin radius($border-radius) {
+    border-radius: $border-radius;
+}
+
+@mixin contact-btn {
+    display: flex;
+    @include gap-text(0.5rem);
+    @include padding-text(0.5rem 1rem);
+    cursor: pointer;
+    color: $text-primary;
+    align-items: center;
+    @include radius(0.25rem);
+    border: 1px solid rgba(209, 213, 219, 1);
+    background-color: $text-inverse;
+}
