--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -2,8 +2,9 @@
 $text-primary: rgba(15, 19, 26, 1);
 $text-secondary: rgba(56, 65, 80, 1);
 $brand-light: rgba(234, 237, 241, 1);
+$text-inverse: rgba(255, 255, 255, 1);
+
 
 // == SIZES == 
 $header-height: 104px;
 $header-padding: 32px 80px 32px 80px;
-$gap: 2rem;
