--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ body {
 
 .header-nav ul {
   display: flex;
-  gap: 2rem;
   cursor: pointer;
+  gap: 2rem;
 }
 .header-nav li {
   list-style-type: none;
@@ -37,5 +37,22 @@ body {
 
 .header-list {
   display: flex;
-  gap: 2rem;
+  gap: 0.5rem;
+}
+
+.header-btn button {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  color: rgb(15, 19, 26);
+  align-items: center;
+  border-radius: 0.25rem;
+  border: 1px solid rgb(209, 213, 219);
+  background-color: rgb(255, 255, 255);
+}
+.header-btn p {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
 }/*# sourceMappingURL=style.css.map */
