--- a/style.css
+++ b/style.css
@@ -55,4 +55,60 @@ body {
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 500;
+}
+
+.dropdown {
+  position: relative;
+}
+.dropdown .select {
+  background: transparent;
+  color: rgb(15, 19, 26);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.dropdown .select:hover, .dropdown .select:active {
+  background-color: aqua;
+}
+.dropdown .caret {
+  width: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 6px solid black;
+  transition: 0.3s;
+  margin-left: 5px;
+}
+.dropdown .caret-rotate {
+  transform: rotate(180deg);
+}
+.dropdown .menu {
+  list-style-type: none;
+  padding: 0.5rem;
+  background: white;
+  box-shadow: 0px 16px 32px 0px rgba(82, 88, 117, 0.08);
+  border-radius: 0.3rem;
+  color: rgb(15, 19, 26);
+  position: absolute;
+  top: 3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  display: none;
+  transition: 0.2s;
+  z-index: 1;
+}
+.dropdown .menu li {
+  padding: 1rem;
+  margin: 0.5rem 0;
+  border-radius: 0.3rem;
+}
+.dropdown .active {
+  background: lightgrey;
+}
+.dropdown .menu-open {
+  display: block;
+  opacity: 1;
 }/*# sourceMappingURL=style.css.map */
