--- a/style.scss
+++ b/style.scss
@@ -55,3 +55,68 @@ body {
             @include weight(500);
         }
 }
+
+.dropdown {
+    position: relative;
+
+    .select {
+        background: transparent;
+        color: $text-primary;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @include padding-text(0.5rem 1rem);
+        @include text-medium;
+
+        &:hover,
+        &:active {
+            background-color: aqua;
+        }
+    }
+    
+    .caret {
+        width: 0;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 6px solid black;
+        transition: 0.3s;
+        margin-left: 5px;
+    }
+    
+    .caret-rotate {
+        transform: rotate(180deg);
+    }
+    
+    .menu {
+        list-style-type: none;
+        @include padding-text(0.5rem);
+        background: white;
+        box-shadow: 0px 16px 32px 0px rgba(82, 88, 117, 0.08);
+        @include radius(0.3rem);
+        color: $text-primary;
+        position: absolute;
+        top: 3rem;
+        left: 50%;
+        transform: translateX(-50%);
+        opacity: 0;
+        display: none;
+        transition: 0.2s;
+        z-index: 1;
+
+        li {
+            @include padding-text(1rem);
+            @include margin-text(0.5rem 0);
+            @include radius(0.3rem);
+        }
+    }
+    
+    .active {
+        background: lightgrey;
+    }
+    
+    .menu-open {
+        display: block;
+        opacity: 1;
+    }
+}
+
