--- a/style.css
+++ b/style.css
@@ -111,4 +111,16 @@ body {
 .dropdown .menu-open {
   display: block;
   opacity: 1;
+}
+
+.main-container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.main-cards {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin: 3rem;
 }/*# sourceMappingURL=style.css.map */
