--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -4,6 +4,9 @@ $text-secondary: rgba(56, 65, 80, 1);
 $brand-light: rgba(234, 237, 241, 1);
 $text-inverse: rgba(255, 255, 255, 1);
 
+$dark-bg: rgba(32, 41, 55, 1);
+$brand-color: rgba(249, 115, 22, 1);
+
 
 // == SIZES == 
 $header-height: 104px;
