--- a/style.css
+++ b/style.css
@@ -75,11 +75,11 @@ body {
 }
 .dropdown .caret {
   width: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 6px solid black;
+  border-left: 0.313rem solid transparent;
+  border-right: 0.313rem solid transparent;
+  border-top: 0.25rem solid black;
   transition: 0.3s;
-  margin-left: 5px;
+  margin-left: 0.313rem;
 }
 .dropdown .caret-rotate {
   transform: rotate(180deg);
@@ -113,8 +113,9 @@ body {
   opacity: 1;
 }
 
+/*Main Content*/
 .main-container {
-  max-width: 1440px;
+  max-width: 90rem;
   margin: 0 auto;
 }
 
@@ -123,4 +124,44 @@ body {
   justify-content: center;
   gap: 1rem;
   margin: 3rem;
+}
+
+/*Footer*/
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 90rem;
+  margin: 0 auto;
+  background-color: lightgrey;
+}
+.footer-container .footer-content {
+  display: flex;
+  gap: 4rem;
+  width: 100%;
+  justify-content: space-around;
+}
+.footer-container .footer-content .footer-first-part .footer-contact {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  color: rgb(249, 115, 22);
+  font-weight: 500;
+}
+.footer-container .footer-content .footer-first-part h2 {
+  font-size: 2.5rem;
+  line-height: 3rem;
+  color: rgb(255, 255, 255);
+  font-weight: 600;
+}
+.footer-container .footer-content .footer-first-part p {
+  max-width: 35.5rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  color: rgb(255, 255, 255);
+}
+
+.footer-form {
+  width: 90%;
+  max-width: 600px;
 }/*# sourceMappingURL=style.css.map */
