--- a/style.css
+++ b/style.css
@@ -123,45 +123,219 @@ body {
   display: flex;
   justify-content: center;
   gap: 1rem;
-  margin: 3rem;
+  margin: 2.5rem 0 0 0;
 }
 
 /*Footer*/
+.footer-bg {
+  background-color: rgb(32, 41, 55);
+  z-index: -1;
+  width: 100%;
+  height: 60.625rem;
+  position: absolute;
+}
+
 .footer-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 90rem;
   margin: 0 auto;
-  background-color: lightgrey;
+  padding: 6rem 7rem 2.5rem 7rem;
+  gap: 4rem;
 }
 .footer-container .footer-content {
   display: flex;
   gap: 4rem;
   width: 100%;
-  justify-content: space-around;
+  height: 29.375rem;
+  justify-content: space-between;
 }
-.footer-container .footer-content .footer-first-part .footer-contact {
+.footer-container .footer-content .footer-first-part {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.footer-container .footer-content .footer-first-part .first-part-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.footer-container .footer-content .footer-first-part .first-part-text .footer-contact {
   font-size: 1rem;
   line-height: 1.5rem;
   color: rgb(249, 115, 22);
   font-weight: 500;
 }
-.footer-container .footer-content .footer-first-part h2 {
+.footer-container .footer-content .footer-first-part .first-part-text h2 {
   font-size: 2.5rem;
   line-height: 3rem;
   color: rgb(255, 255, 255);
   font-weight: 600;
 }
-.footer-container .footer-content .footer-first-part p {
+.footer-container .footer-content .footer-first-part .first-part-text p {
   max-width: 35.5rem;
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 400;
   color: rgb(255, 255, 255);
 }
+.footer-container .footer-content .footer-first-part .footer-info {
+  display: flex;
+  flex-direction: column;
+  gap: 1.313rem;
+}
+.footer-container .footer-content .footer-first-part .footer-info .footer-items {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+.footer-container .footer-content .footer-first-part .footer-info .footer-items p {
+  color: rgb(255, 255, 255);
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+}
+.footer-container .footer-content .footer-first-part .footer-info .footer-items .bi-telephone {
+  color: rgb(255, 255, 255);
+}
+.footer-container .footer-content .footer-first-part .footer-info .footer-items .bi-envelope {
+  color: rgb(255, 255, 255);
+}
+.footer-container .footer-second-part {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.footer-container .footer-second-part .footer-item-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.footer-container .footer-second-part .footer-contact-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+.footer-container .footer-second-part .footer-contact-list p {
+  color: rgb(156, 163, 175);
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  cursor: pointer;
+}
+.footer-container .footer-second-part .footer-first-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+.footer-container .footer-second-part .footer-first-list h4 {
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+}
+.footer-container .footer-second-part .footer-first-list ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  list-style-type: none;
+}
+.footer-container .footer-second-part .footer-first-list ul a {
+  text-decoration: none;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  color: rgb(156, 163, 175);
+}
+.footer-container .footer-second-part .footer-second-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+.footer-container .footer-second-part .footer-second-list h4 {
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+}
+.footer-container .footer-second-part .footer-second-list ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  list-style-type: none;
+}
+.footer-container .footer-second-part .footer-second-list ul a {
+  text-decoration: none;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  color: rgb(156, 163, 175);
+}
+.footer-container .footer-last-part {
+  width: 100%;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+.footer-container .footer-last-part .footer-last-info {
+  display: flex;
+  justify-content: space-between;
+  margin: 1.5rem 0 0 0;
+}
+.footer-container .footer-last-part .footer-last-info .footer-frame p {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+  color: rgb(156, 163, 175);
+}
+.footer-container .footer-last-part .footer-last-info .footer-last-frame {
+  display: flex;
+  align-items: center;
+}
+.footer-container .footer-last-part .footer-last-info .footer-last-frame p {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+  color: rgb(107, 114, 128);
+}
+.footer-container .footer-last-part .footer-last-info .footer-last-frame a {
+  height: 14px;
+  margin: 0.125rem 0 0 0.25rem;
+}
 
 .footer-form {
-  width: 90%;
+  width: 568px;
   max-width: 600px;
+}
+
+.input-group {
+  margin-bottom: 60px;
+  position: relative;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  font-size: 15px;
+}
+
+label {
+  height: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 25px;
+  color: #fff;
+}
+
+button {
+  padding: 10px 0;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  width: 100%;
+  cursor: pointer;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
 }/*# sourceMappingURL=style.css.map */
