druha cast footeru hotova

--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,13 +1,14 @@
 // == COLORS ==
 $text-primary: rgba(15, 19, 26, 1);
 $text-secondary: rgba(56, 65, 80, 1);
-$brand-light: rgba(234, 237, 241, 1);
 $text-inverse: rgba(255, 255, 255, 1);
 $text-quad: rgba(156, 163, 175, 1);
 $text-tertiary: rgba(107, 114, 128, 1);
 
+$color-ondark: rgba(55, 65, 81, 1);
 $dark-bg: rgba(32, 41, 55, 1);
 $brand-color: rgba(249, 115, 22, 1);
+$brand-light: rgba(234, 237, 241, 1);
 
 
 // == SIZES == 
