doladeni uvodni stranky

--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -9,8 +9,9 @@ $color-ondark: rgba(55, 65, 81, 1);
 $dark-bg: rgba(32, 41, 55, 1);
 $brand-color: rgba(249, 115, 22, 1);
 $brand-light: rgba(234, 237, 241, 1);
+$brand-border: rgba(209, 213, 219, 1);
+
 
 
 // == SIZES == 
 $header-height: 104px;
-$header-padding: 32px 80px 32px 80px;
