--- a/style.scss
+++ b/style.scss
@@ -446,6 +446,17 @@ body {
 }
 
 
+.elektro-bg {
+    background-color: $brand-light;
+    height: 528px;
+
+}
+.main-information {
+    max-width: 90rem;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
 
 
 
